fix : postListResponse에 options을 삭제하고 텍스트투표,이미지투표선택지 항목추가